--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <p class="display-7">TE amo!</p>
 
     <div class="container">
-    <button type="button" class="btn btn-primary">Comentar</button>
+    <button type="button" class="btn btn-outline-primary">Comentar</button>
 </div>
 
 
