--- a/cards.html
+++ b/cards.html
@@ -9,14 +9,14 @@
      <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-iYQeCzEYFbKjA/T2uDLTpkwGzCiq6soy8tYaI1GyVh/UjpbCx/TYkiZhlZB6+fzT" crossorigin="anonymous">
 </head>
 <body>
-    <button type="button" class="btn btn-primary">Primary<div class="card" style="width: 18rem;">
+    <div class="card" style="width: 18rem;">
         <img src="..." class="card-img-top" alt="...">
-            <div class="card-body">
-                <h5 class="card-title">Card title
-                <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.
-                <a href="#" class="btn btn-primary">Go somewhere
-            </div>
+        <div class="card-body">
+            <h5 class="card-title">Card title</h5>
+            <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+            <a href="#" class="btn btn-primary">Go somewhere</a>
         </div>
+    </div>
 
 
 <!--Script Boostrap-->
