--- a/cards.html
+++ b/cards.html
@@ -14,7 +14,7 @@
         <img src="..." class="card-img-top" alt="...">
         <div class="card-body">
             <h5 class="card-title">Noticias do dia</h5>
-            <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+            <p class="card-text">AS melhores noticias do dia aqui em Catu e Pojuca</p>
             <a href="#" class="btn btn-primary">Go somewhere</a>
         </div>
     </div>
