--- a/cards.html
+++ b/cards.html
@@ -14,6 +14,7 @@
         <img src="..." class="card-img-top" alt="...">
         <div class="card-body">
             <h5 class="card-title">Noticias do dia</h5>
+            <h6 class="card-subtitle mb-2 text-muted">Autor Eu mesmo</h6>
             <p class="card-text">AS melhores noticias do dia aqui em Catu e Pojuca</p>
             <a href="#" class="btn btn-primary">Go somewhere</a>
         </div>
