--- a/cards.html
+++ b/cards.html
@@ -19,6 +19,22 @@
             <a href="#" class="btn btn-primary">Go somewhere</a>
         </div>
     </div>
+
+    <hr>
+
+    <div class="card">
+        <div class="card-header">
+            Featured
+        </div>
+        <div class="card-body">
+            <h5 class="card-title">Special title treatment</h5>
+            <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
+            <a href="#" class="btn btn-primary">Go somewhere</a>
+        </div>
+    </div>
+
+    <hr>
+    
 </div>
 
 
