--- a/cards.html
+++ b/cards.html
@@ -35,6 +35,17 @@
     </div>
 
     <hr>
+
+    <div class="card">
+        <div class="card-header">
+            Featured
+        </div>
+        <div class="card-body">
+            <h5 class="card-title">Olha só</h5>
+            <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
+            <a href="#" class="btn btn-primary">Go somewhere</a>
+        </div>
+    </div>
     <hr>
     
 </div>
