--- a/landingPage.html
+++ b/landingPage.html
@@ -8,7 +8,7 @@
     <!-- CSS only -->
 <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-iYQeCzEYFbKjA/T2uDLTpkwGzCiq6soy8tYaI1GyVh/UjpbCx/TYkiZhlZB6+fzT" crossorigin="anonymous">
 
-<link href="">
+<link rel="stylesheet" href="./css/style.css">
 
 <title>Finances</title>
 </head>
